@@ -7,19 +7,19 @@ module Spec
 
         def test_should_pass_when_proper_symbol_is_thrown
           assert_nothing_raised do
-            proc { throw :foo }.should.throw :foo
+            lambda { throw :foo }.should.throw :foo
           end
         end
   
         def test_should_fail_when_wrong_symbol_is_thrown
           assert_raise(ExpectationNotMetError) do
-            proc { throw :bar }.should.throw :foo
+            lambda { throw :bar }.should.throw :foo
           end
         end
    
         def test_should_fail_when_no_symbol_is_thrown
           assert_raise(ExpectationNotMetError) do
-            proc { ''.to_s }.should.throw :foo
+            lambda { ''.to_s }.should.throw :foo
           end
         end
       end
@@ -28,25 +28,25 @@ module Spec
 
         def test_should_fail_when_expected_symbol_is_actually_thrown
           assert_raise(ExpectationNotMetError) do
-            proc { throw :foo }.should.not.throw :foo
+            lambda { throw :foo }.should.not.throw :foo
           end
         end
 
         def test_should_pass_when_expected_symbol_is_thrown
           assert_nothing_raised do
-            proc { throw :bar }.should.not.throw :foo
+            lambda { throw :bar }.should.not.throw :foo
           end
         end
 
         def test_should_pass_when_no_symbol_is_thrown
           assert_nothing_raised do
-            proc { ''.to_s }.should.not.throw :foo
+            lambda { ''.to_s }.should.not.throw :foo
           end
         end
 
         def test_should_pass_when_no_symbol_is_thrown_and_none_is_specified
           assert_nothing_raised do
-            proc { ''.to_s }.should.not.throw
+            lambda { ''.to_s }.should.not.throw
           end
         end
       end
